--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY= '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'
-GOOGLE_API_KEY='AIzaSyC6m5tam4GAvmRCVcs0P7EItngmqCfbW4g'
+GROQ_API_KEY= ''
+GOOGLE_API_KEY=''
